--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-# AplicaÁ„o
+# Aplica√ß√£o
 spring.application.name=usuario-api
 server.port=8080
-# Pool de conexıes
+# Pool de conex√µes
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/backend-java
 spring.datasource.username=wanderson
-spring.datasource.password=123456
+spring.datasource.password=wson2705
 # Esquemas DB
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 spring.flyway.schemas=usuarios
 spring.jpa.properties.hibernate.default_schema=usuarios
