Ajustes no controlador de usuários

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/backend-java
-spring.datasource.username=wanderson
+spring.datasource.username=postgres
 spring.datasource.password=wson2705
 # Esquemas DB
 spring.flyway.enabled=true
