Correção do controlador de usuários

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/backend-java
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/backendjava
+spring.datasource.username=wsonalves
 spring.datasource.password=wson2705
 # Esquemas DB
 spring.flyway.enabled=true
