--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-# Aplica√ß√£o
+# AplicaÁ„o
 spring.application.name=usuario-api
 server.port=8080
-# Pool de conex√µes
+# Pool de conexıes
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/backendjava
-spring.datasource.username=wsonalves
-spring.datasource.password=wson2705
+spring.datasource.username=wanderson
+spring.datasource.password=wsa93otl
 # Esquemas DB
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
